crates/ruff_python_parser/tests/snapshots/invalid_syntax@type_params_py311.py.snap
---
source: crates/ruff_python_parser/tests/fixtures.rs
input_file: crates/ruff_python_parser/resources/inline/err/type_params_py311.py
---
## AST

```
Module(
    ModModule {
        range: 0..140,
        body: [
            TypeAlias(
                StmtTypeAlias {
                    range: 44..69,
                    name: Name(
                        ExprName {
                            range: 49..53,
                            id: Name("List"),
                            ctx: Store,
                        },
                    ),
                    type_params: Some(
                        TypeParams {
                            range: 53..56,
                            type_params: [
                                TypeVar(
                                    TypeParamTypeVar {
                                        range: 54..55,
                                        name: Identifier {
                                            id: Name("T"),
                                            range: 54..55,
                                        },
                                        bound: None,
                                        default: None,
                                    },
                                ),
                            ],
                        },
                    ),
                    value: BinOp(
                        ExprBinOp {
                            range: 59..69,
                            left: Name(
                                ExprName {
                                    range: 59..63,
                                    id: Name("list"),
                                    ctx: Load,
                                },
                            ),
                            op: BitOr,
                            right: Name(
                                ExprName {
                                    range: 66..69,
                                    id: Name("set"),
                                    ctx: Load,
                                },
                            ),
                        },
                    ),
                },
            ),
            FunctionDef(
                StmtFunctionDef {
                    range: 70..87,
                    is_async: false,
                    decorator_list: [],
                    name: Identifier {
                        id: Name("foo"),
                        range: 74..77,
                    },
                    type_params: Some(
                        TypeParams {
                            range: 77..80,
                            type_params: [
                                TypeVar(
                                    TypeParamTypeVar {
                                        range: 78..79,
                                        name: Identifier {
                                            id: Name("T"),
                                            range: 78..79,
                                        },
                                        bound: None,
                                        default: None,
                                    },
                                ),
                            ],
                        },
                    ),
                    parameters: Parameters {
                        range: 80..82,
                        posonlyargs: [],
                        args: [],
                        vararg: None,
                        kwonlyargs: [],
                        kwarg: None,
                    },
                    returns: None,
                    body: [
                        Expr(
                            StmtExpr {
                                range: 84..87,
                                value: EllipsisLiteral(
                                    ExprEllipsisLiteral {
                                        range: 84..87,
                                    },
                                ),
                            },
                        ),
                    ],
                },
            ),
            ClassDef(
                StmtClassDef {
                    range: 88..139,
                    decorator_list: [],
                    name: Identifier {
                        id: Name("Foo"),
                        range: 94..97,
                    },
                    type_params: Some(
                        TypeParams {
                            range: 97..134,
                            type_params: [
                                TypeVar(
                                    TypeParamTypeVar {
                                        range: 98..113,
                                        name: Identifier {
                                            id: Name("S"),
                                            range: 98..99,
                                        },
                                        bound: Some(
                                            Tuple(
                                                ExprTuple {
                                                    range: 101..113,
                                                    elts: [
                                                        Name(
                                                            ExprName {
                                                                range: 102..105,
                                                                id: Name("str"),
                                                                ctx: Load,
                                                            },
                                                        ),
                                                        Name(
                                                            ExprName {
                                                                range: 107..112,
                                                                id: Name("bytes"),
                                                                ctx: Load,
                                                            },
                                                        ),
                                                    ],
                                                    ctx: Load,
                                                    parenthesized: true,
                                                },
                                            ),
                                        ),
                                        default: None,
                                    },
                                ),
                                TypeVar(
                                    TypeParamTypeVar {
                                        range: 115..123,
                                        name: Identifier {
                                            id: Name("T"),
                                            range: 115..116,
                                        },
                                        bound: Some(
                                            Name(
                                                ExprName {
                                                    range: 118..123,
                                                    id: Name("float"),
                                                    ctx: Load,
                                                },
                                            ),
                                        ),
                                        default: None,
                                    },
                                ),
                                TypeVarTuple(
                                    TypeParamTypeVarTuple {
                                        range: 125..128,
                                        name: Identifier {
                                            id: Name("Ts"),
                                            range: 126..128,
                                        },
                                        default: None,
                                    },
                                ),
                                ParamSpec(
                                    TypeParamParamSpec {
                                        range: 130..133,
                                        name: Identifier {
                                            id: Name("P"),
                                            range: 132..133,
                                        },
                                        default: None,
                                    },
                                ),
                            ],
                        },
                    ),
                    arguments: None,
                    body: [
                        Expr(
                            StmtExpr {
                                range: 136..139,
                                value: EllipsisLiteral(
                                    ExprEllipsisLiteral {
                                        range: 136..139,
                                    },
                                ),
                            },
                        ),
                    ],
                },
            ),
        ],
    },
)
```
## Unsupported Syntax Errors

  |
1 | # parse_options: {"target-version": "3.11"}
2 | type List[T] = list | set
  | ^^^^ Syntax Error: Cannot use `type` alias statement on Python 3.11 (syntax was added in Python 3.12)
3 | def foo[T](): ...
4 | class Foo[S: (str, bytes), T: float, *Ts, **P]: ...
  |


  |
1 | # parse_options: {"target-version": "3.11"}
2 | type List[T] = list | set
  |          ^^^ Syntax Error: Cannot use type parameter lists on Python 3.11 (syntax was added in Python 3.12)
3 | def foo[T](): ...
4 | class Foo[S: (str, bytes), T: float, *Ts, **P]: ...
  |


  |
1 | # parse_options: {"target-version": "3.11"}
2 | type List[T] = list | set
3 | def foo[T](): ...
  |        ^^^ Syntax Error: Cannot use type parameter lists on Python 3.11 (syntax was added in Python 3.12)
4 | class Foo[S: (str, bytes), T: float, *Ts, **P]: ...
  |


  |
2 | type List[T] = list | set
3 | def foo[T](): ...
4 | class Foo[S: (str, bytes), T: float, *Ts, **P]: ...
  |          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Syntax Error: Cannot use type parameter lists on Python 3.11 (syntax was added in Python 3.12)
  |
